# pyspark-boilerplate-mehdio

./: .gitignore  LICENCE  Makefile  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.devcontainer/: devcontainer.json
configs/: etl_config.json
datajob/: cli.py
datajob/configs/: etl_config.py
datajob/helpers/: spark.py
datajob/jobs/: demo_job.py
dependencies/: logging.py
docker/: dev.Dockerfile
docker/script/: package_zip.sh
src/: main.py
src/helpers/: spark.py
src/jobs/: demo_job.py
tests/: conftest.py  test_etl_job.py
