[tool.poetry]
name = "pyspark-boilerplate-mehdio"
version = "0.2.0"
description = "Boilerplate for pyspark job"
authors = ["Mehdi OUAZZA <mehdi@mehd.io>"]

[tool.poetry.dependencies]
python = "^3.7"
typer = "^0.3.2"
loguru = "^0.5.3"
bump2version = "^1.0.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
black = "^20.8b1"
pylint = "^2.7.2"
mypy = "^0.812"
pytest-cov = "^2.11.1"
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
